force-app/main/default/objects/VacancyCandidate__c/VacancyCandidate__c.object-meta.xml
<CustomObject>
    <label>Vacancy Candidate</label>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Vacancy Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacancy Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>