force-app/main/default/objects/VacancyCandidate__c/fields/Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Vacancy__c</fullName>
    <label>Vacancy</label>
    <referenceTo>Vacancy__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidate_Pivot</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>