force-app/main/default/objects/VacancyCandidate__c/validationRules/Candidate_should_be_validated_by_hr.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_should_be_validated_by_hr</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Candidate__r.Status__c ) &lt;&gt; &#39;Validated by HR&#39;</errorConditionFormula>
    <errorMessage>Only candidates validated by HR available for proposal</errorMessage>
</ValidationRule>