force-app/main/default/objects/VacancyCandidate__c/validationRules/Closed_vacancies_cannot_be_submited.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_vacancies_cannot_be_submited</fullName>
    <active>false</active>
    <errorConditionFormula>OR( TEXT(Vacancy__r.Status__c) = &#39;Cancelled&#39;, TEXT(Vacancy__r.Status__c)= &#39;Closed&#39;)</errorConditionFormula>
    <errorMessage>Closed and canceled vacancies not allowed for proposal</errorMessage>
</ValidationRule>